// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormElement /> Should hide placeholder with hasValue 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={true}
  htmlFor="test-input"
  isFocused={false}
  label="testlabel"
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="testlabel"
      visible={false}
    >
      <div
        aria-hidden={true}
        className="placeholder sg-8wydk2-placeholder-placeholderInactive"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={true}
      isFocused={false}
      label="testlabel"
      labelStatic={false}
    >
      <label
        className="label floating sg-9ajhko-label-labelFloating"
        htmlFor="test-input"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a focused form element 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={true}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={true}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with 1 child 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <input
      key="test-key"
    />
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with no children 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the error message 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText="The error text"
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-error-main)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      ariaHidden={false}
      className={null}
      elementName="test-input"
      errorText="The error text"
      translate={true}
    >
      <ForwardRef
        align="inherit"
        aria-atomic="true"
        aria-hidden={false}
        aria-live="assertive"
        className="sg-1ln57h9-root errorText"
        color="error"
        component="div"
        display="initial"
        gutterBottom={false}
        id="ariaError-test-input"
        noWrap={false}
        paragraph={false}
        variant="caption"
        variantMapping={
          {
            "body1": "p",
            "body2": "p",
            "h1": "h1",
            "h2": "h2",
            "h3": "h3",
            "h4": "h4",
            "h5": "h5",
            "h6": "h6",
            "subtitle1": "h6",
            "subtitle2": "h6",
          }
        }
      >
        <div
          aria-atomic="true"
          aria-hidden={false}
          aria-live="assertive"
          className="engage__typography engage__typography_caption errorText sg-zidkoz-Typography-root-Typography-caption-Typography-colorError-root"
          id="ariaError-test-input"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={{}}
            role={null}
            string="The error text"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              The error text
            </span>
          </Translate>
        </div>
      </ForwardRef>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the label 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label="The label"
  labelStatic={false}
  placeholder=""
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="The label"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="sg-14fp90p-placeholder placeholder"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label="The label"
      labelStatic={false}
    >
      <label
        className="label sg-98zxjx-label-labelRegular"
        htmlFor="test-input"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the placeholder text 1`] = `
<FormElement
  className=""
  disabled={false}
  errorText=""
  hasLeftElement={false}
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  labelStatic={false}
  placeholder="The placeholder"
  showErrorText={true}
  translateErrorText={true}
>
  <div
    className="sg-1iey9hl-formElement formElement ui-shared__form-element"
  >
    <Placeholder
      aria-hidden={true}
      hasLeftElement={false}
      placeholder="The placeholder"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="sg-14fp90p-placeholder placeholder"
      >
        <Translate
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="The placeholder"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The placeholder
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="sg-1fzvff5-underlineWrapper underline"
      >
        <div
          className="sg-ll3grb-underline"
          style={
            {
              "borderBottomColor": "var(--sg-palette-primary-main)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;
